--- a/todoapp/src/App.css
+++ b/todoapp/src/App.css
@@ -83,10 +83,22 @@ form button:hover {
   padding: 1rem;
   cursor: pointer;
   font-size: 1rem;
+  transition: ease-in-out, background .35s ease-in-out;
 }
 .complete-btn {
   background: rgb(11, 212, 162);
 }
+
+.trash-btn:hover {
+  color: #ff6f47;
+  background-color: white;  
+}
+
+.complete-btn:hover {
+  background: white;
+  color:rgb(11, 212, 162);
+}
+
 .todo-item {
   padding: 0rem 0.5rem;
 }
